// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore show Test: Successfully removed 1`] = `<span />`;

exports[`DbStore show Test: While removing 1`] = `<span />`;

exports[`DbStore show Test: after login 1`] = `<span />`;

exports[`DbStore show Test: before login 1`] = `<span />`;

exports[`DbStore show Test: error for not exisiting anymore 1`] = `[NotFound: No record found for id '0']`;

exports[`DbStore show Test: fetch existing resource 1`] = `
Object {
  "id": 0,
  "myNum": 420,
  "myString": "myText",
}
`;

exports[`DbStore show Test: remove render 1`] = `<span />`;

exports[`DbStore show Test: remove result 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 420,
    "myString": "myText",
  },
}
`;
